# TelegramBot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: bot.py  config.toml
src/help/: help.py
src/plugins/AI/: AI.py  __init__.py  config.py  config.toml  func.py  glo.py
src/plugins/AI/handlers/: AIchat.py  auth.py  balance.py  history.py  identity.py
src/plugins/AI/record/: personality.txt
src/plugins/AI/services/: black.py  client.py  html.py  message.py  monitor.py  worker.py
src/plugins/help/: __init__.py
src/utils/: __init__.py  config_loader.py  logger_setup.py  middleware.py  plugins_register.py
