[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncbot"
version = "0.1.0"
description = "一个基于 aiogram 的机器人"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiogram==3.26.0",
    "aiohttp-socks==0.11.0",
    "bs4==0.0.2",
    "httpx==0.28.1",
    "markdown==3.10.2",
    "numpy==2.4.3",
    "opencv-python==4.13.0.92",
    "pathlib==1.0.1",
    "pillow==12.1.1",
    "pydub==0.25.1",
    "selenium==4.41.0"
]

[tool.setuptools]
package-dir = {"" = "src"}